--- a/src/index.css
+++ b/src/index.css
@@ -24,19 +24,20 @@
   text-align: center;
 }
 
-.eventTimesTable,
-.openingTimesTable {
+.river table {
   display: inline-block;
 }
 
-.eventTimesTable td:not(:last-child),
-.openingTimesTable td:not(:last-child) {
+.river table p {
+  margin: 0px;
+}
+
+.river table td:not(:last-child) {
   padding: 0 40px 0 0;
   text-align: left;
 }
 
-.eventTimesTable td:last-child,
-.openingTimesTable td:last-child {
+.river table td:last-child {
   text-align: right;
 }
 
