--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,24 @@
   text-align: right;
 }
 
+@keyframes moveBanner {
+  0% {
+    background-position: center;
+  }
+
+  25% {
+    background-position: bottom left;
+  }
+
+  50% {
+    background-position: center;
+  }
+
+  75% {
+    background-position: top right;
+  }
+}
+
 .banner-img {
   width: 100%;
   height: 500px;
@@ -58,6 +76,7 @@
   background-size: cover;
 
   text-align: center;
+  animation: moveBanner 40s linear infinite;
 }
 
 .grid {
