--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+.nav-spacer,
+.nav-menu {
+  flex: 1;
+  /* display: flex; */
+  justify-content: center;
+}
+
+.nav-menu {
+  text-align: left;
+}
+
+.nav-menu span {
+  padding-left: 20px;
+}
+
+.nav-menu a {
+  color: white;
+  padding: 10px;
+}
+
 .event {
   display: flex;
   flex-direction: row;
@@ -6,18 +26,18 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 80px;
+  padding-bottom: 40px;
   justify-content: center;
 }
 
 .event .event-info {
   width: 100%;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
 }
 
-.event .event-image-container {
+.event .event-image-area {
   max-width: 400px;
   max-height: 250px;
 
@@ -28,9 +48,17 @@
   align-items: center;
   overflow: hidden;
   position: relative;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
-  margin-left: 20px;
-  margin-right: 20px;
+.event .event-image-area .event-image-container {
+  width: 100%;
+  max-height: 250px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .event .event-image-container img {
@@ -237,10 +265,10 @@
   .event .event-info {
     width: 50%;
     padding-left: 20px;
-    padding-top: 20px;
+    padding-top: 0px;
   }
 
-  .event .event-image-container {
+  .event .event-image-area {
     width: 50%;
   }
 
