--- a/src/index.css
+++ b/src/index.css
@@ -104,23 +104,6 @@
   margin-top: 20px;
 }
 
-.aspect-ratio {
-  display: inline-block;
-  position: relative;
-  width: 50%;
-  height: 0;
-  padding-bottom: 50%; /* The height of the item will now be 56.25% of the width. */
-}
-
-/* Adjust the iframe so it's rendered in the outer-width and outer-height of it's parent */
-.aspect-ratio iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-}
-
 .center-vert {
   justify-content: center;
   align-items: center;
@@ -147,24 +130,6 @@
   text-align: right;
 }
 
-@keyframes moveBanner {
-  0% {
-    background-position: center;
-  }
-
-  25% {
-    background-position: bottom left;
-  }
-
-  50% {
-    background-position: center;
-  }
-
-  75% {
-    background-position: top right;
-  }
-}
-
 .banner-img {
   width: 100%;
   height: 500px;
@@ -174,7 +139,6 @@
   background-size: cover;
 
   text-align: center;
-  animation: moveBanner 40s linear infinite;
 }
 
 .grid {
@@ -259,6 +223,27 @@
 
 .tags label {
   cursor: pointer;
+}
+
+.instagram-media {
+  height: 100vw;
+}
+
+.google-maps {
+  height: 560px;
+}
+
+@media screen and (min-width: 40em) and (max-width: 56.25em) {
+  .instagram-media,
+  .google-maps {
+    height: 60vw;
+  }
+}
+
+@media screen and (max-width: 40em) {
+  .google-maps {
+    height: 50vw;
+  }
 }
 
 @media screen and (min-width: 40em) {
